Bug Fix: Socials size on mobile landscape mode small

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -24,7 +24,7 @@
 
 .social_icon > * {
   margin: 0 10px;
-  height: 4vmin;
+  height: 30px;
 }
 
 /* Mobile */
